# inNex

./: CMakeLists.txt  Cargo.toml  main.cpp
doc/declares/: 命名体系.md  设计说明.md
doc/porblems/: 想到的局限性.md
doc/records/25.7.1/: 想法说明.md
example/NoCo/: keywords.NoCo  sample_0_0.NoCo  sample_0_1.NoCo  sample_0_2.NoCo  sample_0_3.NoCo
hdr/module/: hillbert.hpp
src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/UI/: mod.rs
src/UI/view/: simple_box.rs
src/ana/idealize/: idealize.rs  read.rs
src/ana/keys/: types.txt
src/ana/model/: action_stack.rs  key_map.rs  tecor.rs  token.rs  wopol.rs
src/ana/syntax/: mean.rs
src/ana/tokenizer/: token.rs
src/graph/HMatrix/defines/: RoMat.rs
src/graph/HMatrix/romat/: transform.rs
src/model/: group.rs  mod.rs  travel.rs
src/model/Nyde/: mod.rs  nyde.rs
src/model/fast/: bin_search.rs  mod.rs
src/model/pano/: mod.rs
src/module/: hillbert.cpp
src/utils/: mod.rs
src/utils/wordcode/: mod.rs  wordtype.rs
