[package]
name = "in_nex-ui"
version = "0.1.0"
edition = "2021"

[source.crates-io]
replace-with = 'tuna'

[source.tuna]
# 清华
registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"

[workspace]
members = ["src-tauri"]
